docs: live-edit preset per component

--- a/docs/content/2.elements/1.avatar.md
+++ b/docs/content/2.elements/1.avatar.md
@@ -1,6 +1,7 @@
 ---
 github: true
 description: Display an image that represents a resource or a group of resources.
+preset: avatar
 ---
 
 ## Usage
