--- a/docs/content/2.elements/6.kbd.md
+++ b/docs/content/2.elements/6.kbd.md
@@ -4,6 +4,7 @@ title: 'Keyboard Key'
 description: Display a keyboard key in a text block.
 navigation:
   title: 'Kbd'
+preset: kbd
 ---
 
 ## Usage
